// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shapeMargin renders 0 1`] = `
Array [
  .c0 {
  shape-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders function 1`] = `
Array [
  .c0 {
  shape-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: has;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders invalid theme path 1`] = `
Array [
  .c0 {
  shape-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders negative number 1`] = `
Array [
  .c0 {
  shape-margin: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    shape-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    shape-margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-margin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    shape-margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    shape-margin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    shape-margin: July;
  }
}

@media April {
  .c0 {
    shape-margin: August;
  }
}

@media January {
  .c0 {
    shape-margin: September;
  }
}

@media April {
  .c0 {
    shape-margin: November;
  }
}

@media June {
  .c0 {
    shape-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    shape-margin: July;
  }
}

@media April {
  .c0 {
    shape-margin: August;
  }
}

@media January {
  .c0 {
    shape-margin: September;
  }
}

@media April {
  .c0 {
    shape-margin: November;
  }
}

@media June {
  .c0 {
    shape-margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    shape-margin: January;
  }
}

@media April {
  .c0 {
    shape-margin: December;
  }
}

@media January {
  .c0 {
    shape-margin: April;
  }
}

@media April {
  .c0 {
    shape-margin: May;
  }
}

@media June {
  .c0 {
    shape-margin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    shape-margin: January;
  }
}

@media April {
  .c0 {
    shape-margin: December;
  }
}

@media January {
  .c0 {
    shape-margin: April;
  }
}

@media April {
  .c0 {
    shape-margin: May;
  }
}

@media June {
  .c0 {
    shape-margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders postitive number 1`] = `
Array [
  .c0 {
  shape-margin: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders string 1`] = `
Array [
  .c0 {
  shape-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: June;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`shapeMargin renders valid theme path 1`] = `
Array [
  .c0 {
  shape-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  shape-margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
